# Elite101

./: .gitignore  LICENSE  README.md  conflict.py  data.txt  out.txt  pyproject.toml
dice-distributions/: PlotData.py  Plotter.py  Point.py
dice-distributions/enums/: ChartColor.py
examples/: fractal.py
examples/concepts/: CONCEPTS.md
examples/mini-projects/: MINI_PROJECTS.md  fractal.py  out.txt  pianoPass.py
kirklib/: test.py
kirklib/dicedistributions/: DiceDistributionsUtilities.py  __init__.py
kirklib/plotter/: PlotData.py  Plotter.py  __init__.py
kirklib/plotter/enums/: __init__.py
kirklib/utilities/: FileSystemUtilities.py  __init__.py
main/: __init__.py
main/dicedistributions/: DiceDistributionsUtilities.py  __init__.py
main/plotter/: Plotter.py  __init__.py
main/plotter/enums/: __init__.py
main/utilities/: FileSystemUtilities.py
src/main/: __init__.py
src/main/dice-distributions/: DiceDistributions.py  DiceDistributionsUtilities.py  Distribution.py  RollProbability.py
src/main/plotter/: PlotData.py  Plotter.py
src/main/plotter/enums/: ChartColor.py
src/main/utilities/: FileSystemUtilities.py
utilities/: FileSystemUtilities.py
