[tool.poetry]
name = "kirk-library"
version = "0.1.0"
description = "An Example Library for Elite101 Student"
authors = ["Samuel Kirk <samkirk099@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = '~3.8.0'
numpy='~1.26.4'
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
